# Namazu

./: .gitignore  ARCHITECTURE.md  DOMAIN_KNOWLEDGE.md  Dockerfile  PROJECT_BRIEF.md  README.md  TASKS.md  docker-compose.yml  vercel.json
backend/: .env.example  .gitignore  alarm_handler.py  namazu  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  unagi
backend/app/: config.py  main.py
backend/app/db/: database.py
backend/app/middleware/: api_key.py
backend/app/models/: balancing_price.py  de_spot_price.py  elhandlare.py  forecast_accuracy.py  gas_price.py  generation_mix.py  grid_operator.py  hydro_reservoir.py  load_forecast.py  push_subscription.py  spot_price.py  weather_data.py  weather_forecast.py
backend/app/routers/: elhandlare.py  generation.py  (+6 more)
backend/scripts/: ablation_gas.py  backtest_ensemble.py  build_feature_matrix.py  calm_volatile_analysis.py  eval_classification.py  eval_volatile_model.py  feature_coverage.py  feature_importance.py  fetch_prices_smoke.py  flow_vs_mae.py  gen_vapid_keys.py  probe_ntc.py  regime_label_correlation.py  run_backtest.py  run_backtest_horizon.py  sweep_train_window.py  train_classifier.py  tune_hyperparams.py  tune_hyperparams_multihorizon.py  validate_volatile_model.py  worst_day_analysis.py
backend/tests/: test_api_key.py  test_api_schema.py  test_entsoe_client.py  test_features.py  test_features_sql_aggregation.py  test_gas_client.py  test_imbalance_client.py  test_notify.py  test_pipeline.py  test_prices.py  test_riksbank.py  test_simulate.py  test_smhi.py  test_solar_model.py
(+159 files in other folders)
